updated to java 21, Removed Captions, refactored code. Better Syncing with new dataset.